# consistency-check

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.scratch/github-pro-tier3/: PRD.md
.scratch/github-pro-tier3/issues/: 01-cross-repo-project.md  02-org-migration.md  03-audit-rules-mcp-025-030.md
audit-out/: gandi-mcp.md  protonmail-mcp.md  unifi-mcp.md  unraid-mcp.md
audit-out-validation/: gandi-mcp.md  unifi-mcp.md  unraid-mcp.md
consistency_check/: __init__.py  __main__.py  _git.py  audit.py  deployment.py  filer.py  report.py  repos.py  sources.py  stage.py  types.py
consistency_check/rules/: __init__.py  ci.py  deployment.py  deps.py  docs.py  go.py  mcp_protocol.py  python.py  security.py  stage_meta.py  structure.py  tests.py
docs/agents/: issue-tracker.md  triage-labels.md
docs/standards/: README.md  deployment.md  go.md  mcp-protocol.md  mcp.md  python.md  stages.md
docs/superpowers/plans/: 2026-05-06-mcp-consistency.md  2026-06-01-mcp-maturity-ladder.md  2026-06-10-mcp-deployment-scheme.md
docs/superpowers/specs/: 2026-05-06-mcp-consistency-design.md  2026-06-01-mcp-maturity-ladder-design.md  2026-06-10-mcp-deployment-scheme-design.md
tests/: conftest.py  test_audit.py  test_cli.py  test_deployment.py  test_filer.py  test_filer_properties.py  test_meta.py  test_min_stage_map.py  test_report.py  test_repos.py  test_stage.py  test_sweep.py  test_types.py
tests/__snapshots__/: test_report.ambr
tests/fixtures/: build.py
tests/rules/: test_ci.py  test_deployment.py  test_deps.py  test_docs.py  test_go.py  test_mcp_protocol.py  test_python.py  test_security.py  test_stage_meta.py  test_structure.py  test_tests.py
