[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[project]
name = "consistency-check"
version = "0.1.0"
description = "Canonical MCP-server standards and audit tool for the millsmillsymills MCP suite"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"

[project.scripts]
consistency-check = "consistency_check.__main__:main"

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "hypothesis>=6.115.0",
  "ruff>=0.15.12",
  "ty>=0.0.1",
  "syrupy>=4.7.0",
]

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["consistency_check", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "COM812", "ISC001"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "D", "INP001"]

[tool.ty.rules]
unresolved-import = "error"
invalid-argument-type = "error"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
