[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[project]
name = "consistency-check"
version = "0.1.0"
description = "Canonical MCP-server standards and audit tool for the millsmillsymills MCP suite"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"

[project.scripts]
consistency-check = "consistency_check.__main__:main"

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "hypothesis>=6.115.0",
  "ruff>=0.15.12",
  "ty>=0.0.34,<0.1",
  "syrupy>=4.7.0",
]

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["consistency_check", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D203", "D213",            # docstring style conflicts
  "COM812", "ISC001",        # formatter conflicts
  "ANN401",                  # allow Any in narrow places
  "FBT001", "FBT002",        # boolean-trap is fine for our flag-style API
  "TRY003", "EM101", "EM102",# exception message strings
  "S603", "S607",            # subprocess wrapping with `gh` is intentional
  "PLR0913",                 # >5 args caught by global rule already
  "PLR2004",                 # magic numbers in tests are fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "D", "INP001", "ANN", "PLR", "SLF001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
